boinc (6.12.28+dfsg-7) UNRELEASED; urgency=low

  * Added download script for binary applications from
    Debian.
  * Added recommends in -manager for ia32-lib-gtk
    for amd64 only to better guarantee functional graphics
  * Added recommends in -client for ia32-lib

 -- Steffen Moeller <moeller@debian.org>  Sun, 05 Jun 2011 23:44:49 +0200

boinc (6.12.28+dfsg-6) unstable; urgency=low

  * Change amd64 platform name to upstream's
    x86_64-pc-linux-gnu from x86_64-linux-gnu.

 -- Steffen Moeller <moeller@debian.org>  Sun, 05 Jun 2011 23:05:14 +0200

boinc (6.12.28+dfsg-5) UNRELEASED; urgency=low

  * Drop build-dep on obsolete libxcb-atom (closes: #626669).  That code was
    disabled by debian/patches/Makefile_subdirs.patch anyway.

 -- Julien Cristau <jcristau@debian.org>  Sun, 05 Jun 2011 00:02:33 +0200

boinc (6.12.28+dfsg-4) unstable; urgency=low

   * Fixed target of sed instruction (and FTBFS with it)
   * Explicitly setting CPPFLAGS to empty, which may help
     kfreebsd.

 -- Steffen Moeller <moeller@debian.org>  Sat, 04 Jun 2011 21:51:53 +0200

boinc (6.12.28+dfsg-3) unstable; urgency=low

   * Added explicit dependency on python-support for boinc-server-maker.
   * Overriding csh and soname lintian warnings.
   * Addressing the crypt_prog issue.
   * Eliminating build path from python config
   * Eperienting with elimination of leading and ending blanks from
     Makefile lines.

 -- Steffen Moeller <moeller@debian.org>  Sat, 04 Jun 2011 20:33:45 +0200

boinc (6.12.28+dfsg-2) unstable; urgency=low

   * Adjusting build dependencies for Debian unstable (Closes: #626669).

 -- Steffen Moeller <moeller@debian.org>  Sat, 28 May 2011 10:44:59 +0200

boinc (6.12.28+dfsg-1) unstable; urgency=low

   * New upstream version.

     Likely to now truly compile also on the HURD.

   * Mentioned ia32-libs also in the README.Debian (Closes: #562431).

 -- Steffen Moeller <moeller@debian.org>  Fri, 27 May 2011 23:54:18 +0200
