@@ -42,13 +42,13 @@ endif
 
 # Change BOINC platform x86_64-linux-gnu to x86_64-pc-linux-gnu.
 # Keeping the previous name temporarily.
-#!# The 32bit variants shall allow the execution of 32 bit 
-#!# executable in case the scientific application is no available
-#!# for the complete bit size.
+# The 32bit variants shall allow the execution of 32 bit 
+# executable in case the scientific application is no available
+# for the complete bit size.
 ifeq ($(DEB_HOST_GNU_TYPE), x86_64-linux-gnu)
   TYPE_FLAGS += --with-boinc-platform=x86_64-pc-linux-gnu
-  #!#TYPE_FLAGS += --with-boinc-alt-platform=i686-pc-linux-gnu
-  TYPE_FLAGS += --with-boinc-alt-platform=x86_64-linux-gnu
+  TYPE_FLAGS += --with-boinc-alt-platform=i686-pc-linux-gnu
+  #TYPE_FLAGS += --with-boinc-alt-platform=x86_64-linux-gnu
 endif
 
 # Change BOINC platform i486-pc-kfreebsd-gnu to i686-pc-kfreebsd-gnu to be
